<resources>
    <string name="app_name">Kuku Farm</string>
    <string name="feeds">Feeds</string>
    <string name="select">Select Type of Flock</string>
    <string name="remarks">Select Remarks</string>
    <string name="reason_for_reduction">Reason for Reduction</string>
    <string name="flock_reduction">Flock Reduction</string>
    <string name="flock_addition">Flock Addition</string>
    <string name="adit_kuku_farm">ADIT KUKU FARM</string>
    <string name="poultry_farm_management">Poultry farm management</string>
    <string name="email_address">Email Address</string>
    <string name="change_password">Change Password</string>
    <string name="reset_password">Reset Password</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="password">Password</string>
    <string name="your_farm_application_of_choice">Your farm application of choice</string>
    <string name="username">Username</string>
    <string name="national_id_no">National ID No.</string>
    <string name="farm_s_location">Farm\'s Location</string>
    <string name="register_user">Register User</string>
    <string name="already_have_an_account_login_here">Already have an account? Login here</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account_register">Don\'t have an account?Register</string>
    <string name="quantity_reduced">Quantity Reduced</string>
    <string name="customer_name">Customer Name</string>
    <string name="amount_earned_kshs">Amount Earned (Kshs)</string>
    <string name="reduction_date">Reduction date</string>
    <string name="save">Save Information</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="flock_name">Flock Name :</string>
</resources>