<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    android:orientation="vertical"
    tools:context=".ForgotPassword">

    <TextView
        android:id="@+id/appName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/adit_kuku_farm"
        android:fontFamily="sans-serif-black"
        android:textSize="40sp"
        android:textColor="#03A9F4"
        android:gravity="center"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        app:layout_constraintLeft_toLeftOf="parent"/>
    <TextView
        android:id="@+id/appDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/appName"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/poultry_farm_management"
        android:textSize="18sp"
        android:gravity="center"
        android:textStyle="italic"
        app:layout_constraintLeft_toLeftOf="parent"/>
    <TextView
        android:id="@+id/appReset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/appDescription"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/reset_password"
        android:textSize="18sp"
        android:gravity="center"
        android:textStyle="italic"
        app:layout_constraintLeft_toLeftOf="parent"/>
    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="40dp"
        android:layout_marginStart="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@id/appDescription"
        app:layout_constraintRight_toRightOf="parent"
        android:hint="@string/email_address"
        android:textSize="20sp"
        android:inputType="textEmailAddress"
        />
    <Button
        android:id="@+id/btnChange"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        app:layout_constraintTop_toBottomOf="@+id/email"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/change_password"
        android:textSize="15sp"
        android:background="@drawable/bg_button"
        android:textColor="#fff"
        android:layout_marginTop="25dp"
        android:layout_marginRight="80dp"
        android:layout_marginLeft="80dp"
        />

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/progressBar"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:visibility="gone"
        style="@style/Widget.AppCompat.ProgressBar"
        app:layout_constraintRight_toRightOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>
